welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: not found: value a
  a = getCouleurSol()
  ^SlugTracking:9: error: not found: value a
  if (a = Color.Green){
      ^