welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()==true){
    return false
  }
  avance()
  a = getCouleurSol()
  recule()
  if (a = Color.Green){
    return true
  }else{
    return false
  }
}